fix some layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -234,7 +234,7 @@ footer {
   display: contents;
 }
 .programme p {
-  padding-top: 3.8rem;
+  margin-top: O;
 }
 .programme h5 {
   text-align: right;
@@ -272,8 +272,8 @@ footer {
   text-indent: 0;
 }
 #contact {
+  margin-top: 0;
   text-indent: 0;
-  margin-top: 4.83rem;
   margin-left: 4.5rem;
 }
 .mobile-inversion {
@@ -405,11 +405,15 @@ footer {
     margin-bottom: 1rem;
     max-width: 100vw;
   }
+  .center p:first-child {
+    margin-top: 0;
+  }
   .center p{
     margin-top: 1rem;
     max-width: 100vw;
     text-indent: 5vw;
   }
+
   .programme > p:first-child {
     padding-top: 0;
   }
